// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkTab Tests Snapshot Testing External Tab 1`] = `
<WithStyles(ForwardRef(Tab))
  classes={
    Object {
      "selected": "selectedTab",
      "textColorInherit": "linkTextInherit",
      "wrapper": "linkText",
    }
  }
  component="a"
  href="https://cgi.com"
  target="_self"
/>
`;

exports[`LinkTab Tests Snapshot Testing External Tab with Open In New Tab 1`] = `
<WithStyles(ForwardRef(Tab))
  classes={
    Object {
      "selected": "selectedTab",
      "textColorInherit": "linkTextInherit",
      "wrapper": "linkText",
    }
  }
  component="a"
  href="https://rijkswaterstaat.nl"
  rel="noreferrer noopener"
  target="_blank"
/>
`;

exports[`LinkTab Tests Snapshot Testing Required Props 1`] = `
<WithStyles(ForwardRef(Tab))
  classes={
    Object {
      "selected": "selectedTab",
      "textColorInherit": "linkTextInherit",
      "wrapper": "linkText",
    }
  }
  component={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "Link",
      "propTypes": Object {
        "innerRef": [Function],
        "onClick": [Function],
        "replace": [Function],
        "target": [Function],
        "to": [Function],
      },
      "render": [Function],
    }
  }
  to="/root"
/>
`;
